add festo catalog

--- a/Products.html
+++ b/Products.html
@@ -724,6 +724,44 @@
             box-shadow: 0 8px 25px rgba(35, 161, 220, 0.3);
         }
 
+        .catalog-card {
+            background: white;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .catalog-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+        }
+
+        .catalog-card h4 {
+            color: #333;
+            font-weight: 600;
+        }
+
+        .catalog-card p {
+            color: #666;
+            font-size: 0.95rem;
+        }
+
+        .catalog-section .btn-outline-primary {
+            border: 2px solid #23a1dc;
+            color: #23a1dc;
+            background: transparent;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            border-radius: 50px;
+        }
+
+        .catalog-section .btn-outline-primary:hover {
+            background: #23a1dc;
+            color: white;
+            transform: translateY(-2px);
+            box-shadow: 0 8px 25px rgba(35, 161, 220, 0.3);
+        }
+
         .dropdown-menu {
             background-color: #ffffff;
             border: 1px solid rgba(0, 0, 0, 0.1);
@@ -1279,12 +1317,29 @@
     <section class="catalog-section py-5">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-8 text-center" data-aos="fade-up">
-                    <h2 class="display-4 fw-bold mb-4">Download Our Product Catalog</h2>
-                    <p class="lead text-muted mb-4">Get comprehensive information about our complete range of water treatment products and solutions.</p>
-                    <a href="catalogs/Genoasis_catalog.pdf" class="btn btn-primary btn-lg px-5 py-3" download>
-                        <i class="fas fa-download me-2"></i>Download Catalog
-                    </a>
+                <div class="col-lg-10 text-center" data-aos="fade-up">
+                    <h2 class="display-4 fw-bold mb-4">Download Our Product Catalogs</h2>
+                    <p class="lead text-muted mb-5">Get comprehensive information about our complete range of products and solutions.</p>
+                    <div class="row g-4 justify-content-center">
+                        <div class="col-lg-5 col-md-6">
+                            <div class="catalog-card p-4 h-100">
+                                <h4 class="mb-3">Water Treatment Catalog</h4>
+                                <p class="mb-4">Complete range of water treatment products, chemicals, and solutions.</p>
+                                <a href="catalogs/Genoasis_catalog.pdf" class="btn btn-primary btn-lg w-100" download>
+                                    <i class="fas fa-download me-2"></i>Download Water Treatment Catalog
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 col-md-6">
+                            <div class="catalog-card p-4 h-100">
+                                <h4 class="mb-3">Pneumatics Products Catalog</h4>
+                                <p class="mb-4">Complete range of Festo pneumatic components, cylinders, valves, and fittings.</p>
+                                <a href="catalogs/Genoasis_pneumatics_catalog.pdf" class="btn btn-primary btn-lg w-100" download>
+                                    <i class="fas fa-download me-2"></i>Download Pneumatics Products Catalog
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
