--- a/contact.html
+++ b/contact.html
@@ -229,6 +229,28 @@
       color: #23a1dc;
     }
 
+    .catalog-card {
+      background: white;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .catalog-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+    }
+
+    .catalog-card h4 {
+      color: #333;
+      font-weight: 600;
+    }
+
+    .catalog-card p {
+      color: #666;
+      font-size: 0.95rem;
+    }
+
     .alert {
       border-radius: 10px;
       border: none;
@@ -809,12 +831,29 @@
   <section class="catalog-section">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-8 text-center">
-          <h2 class="mb-4" data-aos="fade-up">Download Our Product Catalog</h2>
-          <p class="mb-4" data-aos="fade-up" data-aos-delay="200">Get comprehensive information about our complete range of water treatment products and solutions</p>
-          <a href="catalogs/Genoasis_catalog.pdf" class="btn btn-primary btn-lg" download data-aos="fade-up" data-aos-delay="400">
-            <i class="fas fa-download me-2"></i>Download Catalog
-          </a>
+        <div class="col-lg-10 text-center">
+          <h2 class="display-4 fw-bold mb-4" data-aos="fade-up">Download Our Product Catalogs</h2>
+          <p class="lead mb-5" data-aos="fade-up" data-aos-delay="200">Get comprehensive information about our complete range of products and solutions.</p>
+          <div class="row g-4 justify-content-center">
+            <div class="col-lg-5 col-md-6">
+              <div class="catalog-card p-4 h-100">
+                <h4 class="mb-3">Water Treatment Catalog</h4>
+                <p class="mb-4">Complete range of water treatment products, chemicals, and solutions.</p>
+                <a href="catalogs/Genoasis_catalog.pdf" class="btn btn-primary btn-lg w-100" download>
+                  <i class="fas fa-download me-2"></i>Download Water Treatment Catalog
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-5 col-md-6">
+              <div class="catalog-card p-4 h-100">
+                <h4 class="mb-3">Pneumatics Products Catalog</h4>
+                <p class="mb-4">Complete range of Festo pneumatic components, cylinders, valves, and fittings.</p>
+                <a href="catalogs/Genoasis_pneumatics_catalog.pdf" class="btn btn-primary btn-lg w-100" download>
+                  <i class="fas fa-download me-2"></i>Download Pneumatics Products Catalog
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
