--- a/festo-products.html
+++ b/festo-products.html
@@ -218,7 +218,7 @@
 
         /* Hero Section */
         .hero-section {
-            background-image: url('images/products-banner.jpg');
+            background-image: url('images/festo-automation.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -770,6 +770,21 @@
             <div id="productsListContainer" class="products-list"></div>
         </div>
     </div>
+
+    <!-- Catalog Section -->
+    <section class="catalog-section py-5" style="background: linear-gradient(135deg, #23a1dc, #1e88c5); color: white;">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center" data-aos="fade-up">
+                    <h2 class="display-4 fw-bold mb-4" style="color: white;">Download Our Pneumatics Catalog</h2>
+                    <p class="lead mb-4" style="color: rgba(255,255,255,0.9);">Get comprehensive information about our complete range of Festo pneumatic products and solutions.</p>
+                    <a href="catalogs/Genoasis_pneumatics_catalog.pdf" class="btn btn-light btn-lg px-5 py-3" download style="background: white; color: #23a1dc; border: none; font-weight: 600;">
+                        <i class="fas fa-download me-2"></i>Download Catalog
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Start Footer Section -->
     <footer class="footer-section">
