--- a/dunnage-air-bags.html
+++ b/dunnage-air-bags.html
@@ -656,14 +656,16 @@
         </div>
     </section>
 
-    <!-- CTA Section -->
-    <section class="cta-section pt-5">
+    <!-- Catalog Section -->
+    <section class="catalog-section py-5" style="background: linear-gradient(135deg, #23a1dc, #1e88c5); color: white;">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto text-center">
-                    <h2 class="cta-title" data-aos="fade-up" style="color: white;">Ready to Secure Your Cargo?</h2>
-                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts today to discuss your dunnage air bag requirements and get a customized solution for your shipping needs.</p>
-                    <a href="contact.html" class="btn-cta" data-aos="fade-up" data-aos-delay="400">Get Expert Consultation</a>
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center" data-aos="fade-up">
+                    <h2 class="display-4 fw-bold mb-4" style="color: white;">Download Our Product Catalog</h2>
+                    <p class="lead mb-4" style="color: rgba(255,255,255,0.9);">Get comprehensive information about our complete range of products and solutions.</p>
+                    <a href="catalogs/Genoasis_dunnage_catalog.pdf" class="btn btn-light btn-lg px-5 py-3" download style="background: white; color: #23a1dc; border: none; font-weight: 600;">
+                        <i class="fas fa-download me-2"></i>Download Catalog
+                    </a>
                 </div>
             </div>
         </div>
