--- a/Products.html
+++ b/Products.html
@@ -1339,6 +1339,15 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="col-lg-5 col-md-6">
+                            <div class="catalog-card p-4 h-100">
+                                <h4 class="mb-3">Dunnage Air Bags Products Catalog</h4>
+                                <p class="mb-4">High-quality air bags for secure cargo transportation and load stabilization.</p>
+                                <a href="catalogs/Genoasis_dunnage_catalog.pdf" class="btn btn-primary btn-lg w-100" download>
+                                    <i class="fas fa-download me-2"></i>Download Dunnage Air Bags Products Catalog
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
